--- a/index.html
+++ b/index.html
@@ -134,21 +134,31 @@
                     <h3>LOCATION</h3> 
                     <span>2215 Jhon Daniel Drive Clark, MO 54243</span>
                 </div>
-                <div class="col-12 col-md-4 bord text-center">
+                <div class="col-12 col-md-4 text-center">
                     <h3>AROUND THE WEB</h3> 
-                    <span>2215 Jhon Daniel Drive Clark, MO 54243</span>
+                    <span>
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-google-plus-g"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-linkedin-in"></i>
+                    </span>
                 </div>
-                <div class="col-12 col-md-4 bord text-center">
+                <div class="col-12 col-md-4  text-center">
                     <h3>ABOUT FREELANCER</h3> 
-                    <span>2215 Jhon Daniel Drive Clark, MO 54243</span>
+                    <span>Freelance is a free to use, open source Bootstrap Theme created by <a href=""> Start Bootstrap</a>.</span>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="container-fluid made">
-        <div class="row justify-content-center ">
-            <div class="col-4 bord"></div>
+    <div class="made">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-4 text-center">
+                    Copyright <i class="far fa-copyright"></i> YOur Website 2019
+                </div>
+            </div>
+
         </div>
     </div>
 
